[package]
name = "rikotsu"
authors = ["Paul COMTE <paul.codepro@gmail.com>"]
version = "0.1.0"
repository = "https://github.com/RqndomHax/Rikotsu"
description = "A database system made in pure Rust"
readme = "README.md"
license = "AGPL-3.0-or-later"
include = [ "src/**", "crates/**", "README.md" ]
keywords = [ "database", "storage", "db", "cache", "powerful" ]
categories = [ "Database implementations", "Caching" ]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
